kubernetes-dashboard/dashboard-ingress-traefik.yml
apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: kubernetes-dashboard-ingress
    namespace: kubernetes-dashboard
    annotations:
      kubernetes.io/ingress.class: "traefik"
      traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
  spec:
    rules:
    - host: k3s
      http:
        paths:
        - path: /kubernetes
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 80
